--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
 </head>
 <body>
     <div id = "container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id=" post">
             <h1>Aqui vamos hacer un post</h1>
           <p>Aqui hablaremos de nuestro blogpost</p>
