--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
 <body>
     <div id = "container">
         <div id="cabecera">
-            Cabecera
+            HyperBlog
+            <span id="taligne">Tu blog preferido</span>
         </div>
         <div id=" post">
             <h1>Aqui vamos hacer un post</h1>
