Agregado contenido adicional en el blog en la rama master2

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
         <div id=" post">
             <h1>Aqui vamos hacer un post</h1>
           <p>Aqui hablaremos de nuestro blogpost</p>
+          <p>Esto es para verificar los cambio que se hacen
+            en las diferentes brenches de Git ........... :)
+          </p>
         </div>
     </div>
 </body>
