simulado conflicto en la rama cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div id = "container">
         <div id="cabecera">
             HyperBlog
-            <span id="taligne">Tu blog preferido</span>
+            <span id="taligne">Tu blog de cabecera</span>
         </div>
         <div id=" post">
             <h1>Aqui vamos hacer un post</h1>
