Se agrego parrafo de contenido, y se hizo cambios en las misma lineas que en la rama cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <div id = "container">
         <div id="cabecera">
             HyperBlog
-            <span id="taligne">Tu blog preferido</span>
+            <span id="taligne">Tu blog maestro</span>
         </div>
         <div id=" post">
             <h1>Aqui vamos hacer un post</h1>
@@ -15,6 +15,7 @@
           <p>Esto es para verificar los cambio que se hacen
             en las diferentes brenches de Git ........... :)
           </p>
+          <p>Participa publicando tu contenido</p>
         </div>
     </div>
 </body>
