--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Blogpost</title>
+    <title>Bienvenido al Hyperblog</title>
     <link rel= "stylesheet" href="css/estilos.css"/>
 </head>
 <body>
