--- a/blogpost.html
+++ b/blogpost.html
@@ -3,6 +3,7 @@
     <title>Bienvenido al Hyperblog 2.0</title>
     <link rel= "stylesheet" href="css/estilos.css"/>
 </head>
+<meta charset="UTF-8">
 <body>
     <div id = "container">
         <div id="cabecera">
