Cabecera footer terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
           </p>
           <p>Participa publicando tu contenido</p>
         </div>
+        <div id ="footer">
+           Hecho con amor💛
+        </div>
     </div>
 </body>
 </html>
