logo añadido con exitpo

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
 <body>
     <div id = "container">
         <div id="cabecera">
+          <img id="logo" src="imagenes/hero.png" />
             HyperBlog
             <span id="taligne">Tu blog maestro</span>
         </div>
