--- a/blogpost.html
+++ b/blogpost.html
@@ -15,9 +15,9 @@
             <h1>Aqui vamos hacer un post</h1>
           <p>Aqui hablaremos de nuestro blogpost</p>
           <p>Esto es para verificar los cambio que se hacen
-            en las diferentes brenches de Git ........... :)
+            en las diferentes brenches de Git.
           </p>
-          <p>Participa publicando tu contenido</p>
+          <p>Suscribite y dale like!</p>
         </div>
         <div id ="footer">
            Hecho con amor💛
