--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             <span id="taligne">Tu blog maestro</span>
         </div>
         <div id=" post">
-            <h1>Aqui vamos hacer un post</h1>
+            <h1>Aqui vamos hacer un post, la historia de un gran proyecto</h1>
           <p>Aqui hablaremos de nuestro blogpost</p>
           <p>Esto es para verificar los cambio que se hacen
             en las diferentes brenches de Git.
