se agreggo imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
           <p>Esto es para verificar los cambio que se hacen
             en las diferentes brenches de Git.
           </p>
+          <p><img id = "teams" src = "imagenes/equipo.png" width="200" ></p>
           <p>Suscribite y dale like!</p>
         </div>
         <div id ="footer">
