Cambios al readme y eliminacion de imagenes

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 <body>
     <div id = "container">
         <div id="cabecera">
-          <img id="logo" src="imagenes/hero.png" />
+          <img id="logo" src="https://i.imgur.com/KZWsb5P.png" />
             HyperBlog
             <span id="taligne">Tu blog maestro</span>
         </div>
@@ -17,7 +17,7 @@
           <p>Esto es para verificar los cambio que se hacen
             en las diferentes brenches de Git.
           </p>
-          <p><img id = "teams" src = "imagenes/equipo.png" width="200" ></p>
+          <p><img id = "teams" src = "https://i.imgur.com/elNyZFO.jpg" width="200" ></p>
           <p>Suscribite y dale like!</p>
         </div>
         <div id ="footer">
